--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -252,7 +252,7 @@ jobs:
           cd $SERVICE_FOLDER
           Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
           echo "Docker_image: $Docker_image"
-          command="docker build -f $SERVICE_FOLDER/Dockerfile . -t $Docker_image"
+          command="docker build -f . -t $Docker_image"
           echo "$command"
           $command
           docker push $Docker_image
