--- a/helm/charts/services/amplication-git-pull-service/templates/service.yaml
+++ b/helm/charts/services/amplication-git-pull-service/templates/service.yaml
@@ -1,3 +1,3 @@
 {{ include "base.service" (list . "amplication-git-pull-service.service") -}}
-{{- define "amplication-git-pull-service" -}}
+{{- define "amplication-git-pull-service.service" -}}
 {{- end }}
