--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -1,42 +1,40 @@
 cp-helm-charts:
-  enabled: true
-  cp-kafka:
-    enabled: true
-    image: confluentinc/cp-kafka
-    imageTag: 6.1.0
-    prometheus:
-      jmx:
-        enabled: true
-    podAnnotations:
-      cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
-    resources: {}
-    heapOptions: "-Xms512M -Xmx512M"
-    brokers: 2
-    persistence:
-      enabled: true
-      size: 5Gi
-    configurationOverrides:
-      offsets.topic.replication.factor: "1"
-  cp-zookeeper:
-    enabled: true
-    servers: 1
-    image: confluentinc/cp-zookeeper
-    imageTag: 6.1.0
-    heapOptions: "-Xms512M -Xmx512M"
-    persistence:
-      enabled: true
-      dataDirSize: 10Gi
-      dataLogDirSize: 10Gi
-  cp-schema-registry:
-    enabled: false
-  cp-kafka-rest:
-    enabled: false
-  cp-kafka-connect:
-    enabled: false
-  cp-control-center:
-    enabled: false
-  cp-ksql-server:
-    enabled: false
+  enabled: false
+# cp-kafka:
+#   enabled: true
+#   image: confluentinc/cp-enterprise-kafka
+#   imageTag: 6.1.0
+#   prometheus:
+#     jmx:
+#       enabled: true
+#   podAnnotations:
+#     cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
+#   resources: {}
+#   heapOptions: "-Xms512M -Xmx512M"
+#   brokers: 1
+#   persistence:
+#     enabled: true
+#     size: 5Gi
+#   configurationOverrides:
+#     offsets.topic.replication.factor: "1"
+# cp-zookeeper:
+#   enabled: true
+#   servers: 1
+#   image: confluentinc/cp-zookeeper
+#   imageTag: 6.1.0
+#   heapOptions: "-Xms512M -Xmx512M"
+#   persistence:
+#     enabled: true
+# cp-schema-registry:
+#   enabled: false
+# cp-kafka-rest:
+#   enabled: false
+# cp-kafka-connect:
+#   enabled: false
+# cp-control-center:
+#   enabled: false
+# cp-ksql-server:
+#   enabled: false
 
 postgres:
   install: false
@@ -82,7 +80,7 @@ amplication-server:
       HOST: "https://server-dev.staging-os.amplication-dev.com"
       CLIENT_HOST: "https://app-dev.staging-os.amplication-dev.com"
 
-      KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: '["confluent-oss-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server
 
@@ -113,6 +111,7 @@ amplication-server:
 
 amplication-git-push-webhook-service:
   image:
+    repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-push-webhook-service
     tag: "feature-add-services"
   postgres:
     install: false
@@ -127,6 +126,7 @@ amplication-git-push-webhook-service:
 
 amplication-git-pull-service:
   image:
+    repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-service
     tag: "feature-add-services"
   postgres:
     install: false
@@ -150,6 +150,7 @@ amplication-git-pull-service:
 
 amplication-git-pull-request-service:
   image:
+    repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-request-service
     tag: "feature-add-services"
   config:
     env:
