--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -70,15 +70,11 @@ jobs:
       - name: set namespace
         id: set-namespace
         run: |
-          if [ "$TARGET_ENV" = "custom" ]; then
-            TARGET_ENV=$TARGET_ENV_CUSTOM
-          fi
           NAMESPACE=$TARGET_ENV
           echo "Will deploy to $NAMESPACE"
           echo "NAMESPACE=$NAMESPACE" >> $GITHUB_ENV
         env:
           TARGET_ENV: ${{ github.event.inputs.target-env }}
-          TARGET_ENV_CUSTOM: ${{ github.event.inputs.target-env-custom }}  
       - name: set cluster name
         id: set-cluster-name
         run: |
@@ -119,25 +115,24 @@ jobs:
       - name: deploy app
         id: deploy-app
         run: |
-          if [ "$TARGET_ENV" = "custom" ]; then
-            TARGET_ENV="staging-os"
-          fi
           ARGO_CD_URL="argocd.$TARGET_ENV.amplication-dev.com"
-          secret_arn=$(aws secretsmanager list-secrets --filters Key=tag-key,Values=deployment --filters Key=tag-value,Values=$TARGET_ENV | jq -r '.SecretList[0].ARN')
           if [ "$TARGET_ENV" = "custom" ]; then
-            TARGET_ENV=$TARGET_ENV_CUSTOM
-            sed -i "s|staging-os|$NAMESPACE|g" secret-$TARGET_ENV.yaml
+            ARGO_CD_URL="argocd.staging-os.amplication-dev.com"
           fi
+          
+          secret_arn=$(aws secretsmanager list-secrets --filters Key=tag-key,Values=deployment --filters Key=tag-value,Values=$TARGET_ENV | jq -r '.SecretList[0].ARN')
           secret_values_file_content=$(aws secretsmanager get-secret-value --secret-id $secret_arn | jq -r '.SecretString') > secret-$TARGET_ENV.yaml
-          cat secret-$TARGET_ENV.yaml
+          
           COMMONM_VALUES_FILE="values-common.yaml"
           ENV_VALUES_FILE="values-$TARGET_ENV.yaml"
+          SECRETS="secret-$TARGET_ENV.yaml"
+          
           export TARGET_ENV_SECRET=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
           echo "TARGET_ENV_SECRET: $TARGET_ENV_SECRET"
           COMMAND="argocd login $ARGO_CD_URL --username admin --password $ARGO_CD_PASSWORD --grpc-web"
           echo "$COMMAND"
           $COMMAND
-          SECRETS="-f secret-$TARGET_ENV.yaml"
+          
           COMMAND="argocd app create $APP_NAME --project default --dest-namespace $NAMESPACE --path helm/charts/amplication  --dest-server https://kubernetes.default.svc --repo $REPO_URL --revision $GITHUB_REF_NAME --values $COMMONM_VALUES_FILE --values $ENV_VALUES_FILE $VERSIONS $SECRETS --upsert"
           COMMAND=$(echo $COMMAND|tr -d '\n')
           echo "$COMMAND"
