--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -22,7 +22,7 @@ jobs:
       id: create-secret-names
       run: |
         export TARGET_ENV=$(echo $TARGET_ENV | tr 'a-z' 'A-Z' | tr '-' '_')
-        if [ "$TARGET_ENV" != "PROD" ] || [ "$TARGET_ENV" != "STAGING" ]; then
+        if [ "$TARGET_ENV" = "PROD" ] || [ "$TARGET_ENV" = "STAGING" ]; then
           echo "::set-output name=ARGOCD::AWS_${TARGET_ENV}_ARGOCD"
         else
           echo "::set-output name=ARGOCD::AWS_STAGING_OS_ARGOCD"
@@ -66,9 +66,8 @@ jobs:
       - name: set cluster name
         id: set-cluster-name
         run: |
-          if [ "$TARGET_ENV" = "custom" ]; then
-            CLUSTER_NAME="useast1-staging-os"
-          else
+          CLUSTER_NAME="useast1-staging-os"
+          if [ "$TARGET_ENV" = "prod" ] || [ "$TARGET_ENV" = "staging" ]; then
             CLUSTER_NAME="useast1-$TARGET_ENV"
           fi
           echo "Will deploy to $CLUSTER_NAME eks cluster"
@@ -105,7 +104,7 @@ jobs:
         run: |
           #set argocd URL
           ARGO_CD_URL="argocd.staging-os.amplication-dev.com"
-          if [ "$TARGET_ENV" != "prod" ] || [ "$TARGET_ENV" != "staging" ]; then
+          if [ "$TARGET_ENV" = "prod" ] || [ "$TARGET_ENV" = "staging" ]; then
             ARGO_CD_URL="argocd.$TARGET_ENV.amplication-dev.com"
           fi
           echo "ARGO_CD_URL: $ARGO_CD_URL"
