add tolerations for kafka + modify envs

--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -1,5 +1,9 @@
 cp-helm-charts:
   enabled: false
+  cp-kafka:
+    enabled: false
+  cp-zookeeper:
+    enabled: false
 
 postgres:
   install: false
