--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -1,44 +1,44 @@
 cp-helm-charts:
-  enabled: false
-# cp-kafka:
-#   enabled: true
-#   image: confluentinc/cp-enterprise-kafka
-#   imageTag: 6.1.0
-#   prometheus:
-#     jmx:
-#       enabled: true
-#   podAnnotations:
-#     cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
-#   resources: {}
-#   heapOptions: "-Xms512M -Xmx512M"
-#   tolerations:
-#   - key: "kafka"
-#     operator: "Equal"
-#     value: "true" 
-#   brokers: 1
-#   persistence:
-#     enabled: true
-#     size: 5Gi
-#   configurationOverrides:
-#     offsets.topic.replication.factor: "1"
-# cp-zookeeper:
-#   enabled: true
-#   servers: 1
-#   image: confluentinc/cp-zookeeper
-#   imageTag: 6.1.0
-#   heapOptions: "-Xms512M -Xmx512M"
-#   persistence:
-#     enabled: true
-# cp-schema-registry:
-#   enabled: false
-# cp-kafka-rest:
-#   enabled: false
-# cp-kafka-connect:
-#   enabled: false
-# cp-control-center:
-#   enabled: false
-# cp-ksql-server:
-#   enabled: false
+  enabled: true
+  cp-kafka:
+    enabled: true
+    image: confluentinc/cp-enterprise-kafka
+    imageTag: 6.1.0
+    prometheus:
+      jmx:
+        enabled: true
+    podAnnotations:
+      cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
+    resources: {}
+    heapOptions: "-Xms512M -Xmx512M"
+    tolerations:
+    - key: "kafka"
+      operator: "Equal"
+      value: "true" 
+    brokers: 1
+    persistence:
+      enabled: true
+      size: 5Gi
+    configurationOverrides:
+      offsets.topic.replication.factor: "1"
+  cp-zookeeper:
+    enabled: true
+    servers: 1
+    image: confluentinc/cp-zookeeper
+    imageTag: 6.1.0
+    heapOptions: "-Xms512M -Xmx512M"
+    persistence:
+      enabled: true
+  cp-schema-registry:
+    enabled: false
+  cp-kafka-rest:
+    enabled: false
+  cp-kafka-connect:
+    enabled: false
+  cp-control-center:
+    enabled: false
+  cp-ksql-server:
+    enabled: false
 
 postgres:
   install: false
@@ -84,7 +84,7 @@ amplication-server:
       HOST: "https://server-dev.staging-os.amplication-dev.com"
       CLIENT_HOST: "https://app-dev.staging-os.amplication-dev.com"
 
-      KAFKA_BROKERS: '["confluent-oss-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: '["amplication-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server
 
