--- a/.github/workflows/cd-aws.yml
+++ b/.github/workflows/cd-aws.yml
@@ -110,14 +110,14 @@ jobs:
           echo "ARGO_CD_URL: $ARGO_CD_URL"
 
           #download secret from AWS
+          SECRETS="secret-$TARGET_ENV.yaml"
           secret_arn=$(aws secretsmanager list-secrets --filters Key=tag-key,Values=deployment --filters Key=tag-value,Values=$TARGET_ENV | jq -r '.SecretList[0].ARN')
-          echo $(aws secretsmanager get-secret-value --secret-id $secret_arn | jq -r '.SecretString') > helm/charts/amplication/secret-$TARGET_ENV.yaml
+          echo $(aws secretsmanager get-secret-value --secret-id $secret_arn | jq -r '.SecretString') > .helm/charts/amplication/$SECRETS
           #create values files
           COMMONM_VALUES_FILE="values-common.yaml"
           ENV_VALUES_FILE="values-$TARGET_ENV.yaml"
-          SECRETS="secret-$TARGET_ENV.yaml"
           echo "---------------------"
-          cat helm/charts/amplication/$SECRETS
+          cat .helm/charts/amplication/$SECRETS
           echo "---------------------"
 
 
