--- a/helm/charts/services/amplication-git-pull-request-service/values.yaml
+++ b/helm/charts/services/amplication-git-pull-request-service/values.yaml
@@ -15,8 +15,8 @@ image:
   imagePullSecrets: []
 
 volume:
-  name: amplication-git-pull-data
-  path: /amplication-data
+  name: amplication-data
+  path: /amplication-data/pull
 
 service:
   type: ClusterIP
@@ -31,3 +31,6 @@ pvc:
   storageRequest: 1Gi
   storageName: efs-sc
   name: efs-claim
+
+secrets:
+  GPC: ""
