--- a/ee/packages/amplication-git-push-webhook-service/Dockerfile
+++ b/ee/packages/amplication-git-push-webhook-service/Dockerfile
@@ -49,4 +49,4 @@ COPY --from=build /app/packages/amplication-kafka/node_modules /app/packages/amp
 COPY --from=build /app/packages/amplication-kafka/lib /app/packages/amplication-kafka/lib
 
 EXPOSE 4567
-CMD [ "node", "dist/src/main"]
+CMD [ "node", "dist/main"]
