--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -8,3 +8,4 @@ REACT_APP_FEATURE_FLAGS="{}"
 ֿREACT_APP_GITHUB_CLIENT_ID=2e4a744d73ea633fd615
 
 REACT_APP_DATA_SOURCE="/graphql"
+REACT_APP_SERVER_URI=""
