--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -1,6 +1,6 @@
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
 KAFKA_BROKERS="["localhost:9092"]"
-KAFKA_REPOSITORY_PUSH_QUEUE = repositoryPush_created
+KAFKA_REPOSITORY_PUSH_QUEUE ="git.external.push.event.0"
 
 # Postgres
 POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5432
