--- a/.github/workflows/scripts/secret_template.yaml
+++ b/.github/workflows/scripts/secret_template.yaml
@@ -1,8 +1,6 @@
 {
   "apiVersion": "v1",
-  "data": {
-    
-  },
+  "data": {},
   "kind": "Secret",
   "metadata": {
     "name": "NAME_PLACEHOLDER"
