add react query to package json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "lerna": "4.0.0",
     "ora": "5.4.0",
+    "react-query": "^3.39.1",
     "semver": "7.3.5",
     "winston": "3.3.4"
   },
