--- a/helm/charts/amplication/values-staging-os.yaml
+++ b/helm/charts/amplication/values-staging-os.yaml
@@ -1,9 +1,44 @@
 cp-helm-charts:
-  enabled: false
+  enabled: true
   cp-kafka:
-    enabled: false
-  cp-zookeeper:
-    enabled: false
+      enabled: true
+      image: confluentinc/cp-enterprise-kafka
+      imageTag: 6.1.0
+      prometheus:
+        jmx:
+          enabled: true
+      podAnnotations:
+        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
+      resources: {}
+      heapOptions: "-Xms512M -Xmx512M"
+      tolerations:
+        - key: "kafka"
+          operator: "Equal"
+          value: "true"
+      brokers: 1
+      persistence:
+        enabled: true
+        size: 5Gi
+      configurationOverrides:
+        offsets.topic.replication.factor: "1"
+    cp-zookeeper:
+      enabled: true
+      servers: 1
+      image: confluentinc/cp-zookeeper
+      imageTag: 6.1.0
+      heapOptions: "-Xms512M -Xmx512M"
+      persistence:
+        enabled: true
+    cp-schema-registry:
+      enabled: false
+    cp-kafka-rest:
+      enabled: false
+    cp-kafka-connect:
+      enabled: false
+    cp-control-center:
+      enabled: false
+    cp-ksql-server:
+      enabled: false
 
 postgres:
   install: false
@@ -29,7 +64,7 @@ amplication-server:
       CLIENT_HOST: "https://app.staging-os.amplication-dev.com"
 
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
-      KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
@@ -71,7 +106,7 @@ amplication-git-push-webhook-service:
     hostname: webhook.staging-os.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
       KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
@@ -93,7 +128,7 @@ amplication-git-pull-service:
       GIT_DEFAULT_ORIGIN_NAME: origin
       GITHUB_APP_PRIVATE_KEY: ""
 
-      KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
       KAFKA_CLIENT_ID: git-pull-service
       KAFKA_GROUP_ID: git-pull-service-group
 
@@ -102,7 +137,7 @@ amplication-git-pull-service:
 amplication-git-pull-request-service:
   config:
     env:
-      KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
+      # KAFKA_BROKERS: '["b-1-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198","b-2-public.amplication-useast1-s.g1n9vj.c22.kafka.us-east-1.amazonaws.com:9198"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
